# lilac

./: Cargo.toml  README.md  output.html  prelude.js
examples/gltesting/: Note.rslilac  Root.rslilac
examples/testing/: ListItem.lilac  Post.lilac  Root.lilac  lilac.json
src/: codegen.rs  compile.rs  config.rs  css.rs  css_component_scoping.rs  job.rs  js_codegen.rs  js_component_scoping.rs  lib.rs  main.rs  parse.rs  rs_codegen.rs  utils.rs
test-site/: ListItem.lilac  Post.lilac  Root.lilac
