[package]
name = "lilac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
owo-colors = "4.0.0"
ress = "0.11.6"
rustc_lexer = "0.1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
wasm-bindgen = "0.2.91"

[lib]
crate-type = ["cdylib", "rlib"]
